syntax = "proto3";

package silenteight.agent.document.v1.api;

import public "silenteight/agent/document/v1/api/fact.proto";

option java_package = "com.silenteight.proto.agent.document.v1.api";
option java_outer_classname = "DocumentRecognizerAgentApiProto";
option java_multiple_files = true;

service DocumentRecognizerAgent {
  rpc RecognizeDocuments (RecognizeDocumentsRequest) returns (stream RecognizeDocumentsResponse) {
  }
  rpc IsDocumentType (IsDocumentTypeRequest) returns (IsDocumentTypeResponse) {
  }
}
message RecognizedDocument {
  string type = 1;
  Facts recognized_facts = 2;
}

message RecognizeDocumentsRequest {
  repeated string document_numbers = 1;
}

message RecognizeDocumentsResponse {
  // Index of inputs collection element from the request body
  uint64 index = 1;
  repeated RecognizedDocument documents = 2;
  string error_message = 3;
}

message IsDocumentTypeRequest {
  string document_number = 1;
  repeated string document_types = 2;
}

message IsDocumentTypeResponse {

  message Reason {
    repeated RecognizedDocument recognized_documents = 1;
  }

  enum Solution {
    TRUE = 0;
    FALSE = 1;
    NO_DATA = 2;
    INCONCLUSIVE = 3;
  }

  Solution solution = 1;
  Reason reason = 2;
}
